# tftp-symbolic-testing

./: .gitignore  LICENSE  README.md  wunderfuzz.toml
.github/workflows/: check.yml  harness.yml
docs/: index.md
docs/assets/: style.css
scripts/: itf_to_mermaid.py  log_to_mermaid.py  log_to_plot.py  render_log_traces.sh  render_traces.sh
spec/: MC2_tftp.tla  tftp.tla  typedefs.tla  util.tla
test-harness/: .gitignore  CHECKLIST.md  Dockerfile  Dockerfile.atftpd  Dockerfile.busybox  Dockerfile.dnsmasq  Dockerfile.gotftpd  Dockerfile.rs-tftpd  IMPLEMENTATION.md  README.md  SUMMARY.md  client.py  docker-compose.yml  docker_manager.py  harness.py  pyproject.toml  server.py  setup.sh  tftp_client_docker.py  verify_files.py
test-harness/files/: file1  file2  file3
