[tool.poetry]
name = "tftp-test-harness"
version = "0.1.0"
description = "Test harness for TFTP protocol using Apalache symbolic execution"
authors = ["Igor Konnov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.3"
requests = "^2.31.0"
itf-py = "^0.4.2"
orjson = "^3.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
